--- a/index.html
+++ b/index.html
@@ -8,19 +8,51 @@
 </head>
 <body>
     <header>
-<a href="">WebStudio</a>
-<nav>
-    <ul>
-        <li><a href="">Студия</a></li>
-        <li><a href="">Портфолио</a></li>
-        <li><a href="">Контакты</a></li>
-    </ul>
-</nav>
-<a href="mailto:info@devstudio.com">info@devstudio.com</a>
-<a href="tel:+380961111111">+38 096 111 11 11</a>
+        <a href="">WebStudio</a>
+        <nav>
+            <ul>
+                <li><a href="">Студия</a></li>
+                <li><a href="">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+        </nav>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
     <main>
-
+        <section>
+            <h1>Эффективные решения для вашего бизнеса</h1>
+            <button type="button">Заказать услугу</button>
+        </section>
+        <section>
+            <h2>Про нас</h2>
+            <ul>
+                <li>
+                    <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li><img src="./images/img.jpg" alt="набор кода"></li>
+                <li><img src="./images/img-1.jpg" alt="силует телефона на экране ноутбука"></li>
+                <li><img src="./images/img-2.jpg" alt="выбор цвета на палитре"></li>
+            </ul>
+        </section>
     </main>
     <footer>
 
