--- a/index.html
+++ b/index.html
@@ -1,61 +1,108 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-</head>
-<body>
+  </head>
+  <body>
+    <!-- Шапка -->
     <header>
-        <a href="">WebStudio</a>
-        <nav>
-            <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
-            </ul>
-        </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <a href="">WebStudio</a>
+      <nav>
+        <ul>
+          <li><a href="">Студия</a></li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+      </nav>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
     <main>
-        <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
-        </section>
-        <section>
-            <h2>Про нас</h2>
-            <ul>
-                <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                </li>
-                <li>
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                </li>
-                <li>
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                </li>
-                <li>
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h2>Чем мы занимаемся</h2>
-            <ul>
-                <li><img src="./images/img.jpg" alt="набор кода"></li>
-                <li><img src="./images/img-1.jpg" alt="силует телефона на экране ноутбука"></li>
-                <li><img src="./images/img-2.jpg" alt="выбор цвета на палитре"></li>
-            </ul>
-        </section>
+      <!-- герой -->
+      <section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <button type="button">Заказать услугу</button>
+      </section>
+      <!-- Особенности -->
+      <section>
+        <h2>Особенности</h2>
+        <ul>
+          <li>
+            <h3>Внимание к деталям</h3>
+            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+          </li>
+          <li>
+            <h3>Пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3>Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3>Современные технологии</h3>
+            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          </li>
+        </ul>
+      </section>
+      <!-- Чем мы занимаемся -->
+      <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li><img src="./images/img.jpg" alt="набор кода" width="370" /></li>
+          <li>
+            <img src="./images/img-1.jpg" alt="силует телефона на экране ноутбука" width="370" />
+          </li>
+          <li><img src="./images/img-2.jpg" alt="выбор цвета на палитре" width="370" /></li>
+        </ul>
+      </section>
+      <!-- Наша команда -->
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="./images/igor.jpg" alt="фото дизайнера" width="270" />
+            <p>Игорь Демьяненко</p>
+            <p lang="en">Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/olga.jpg" alt="фото разработчика" width="270" />
+            <p>Ольга Репина</p>
+            <p lang="en">Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/nikola.jpg" alt="фото маркетолога" width="270" />
+            <p>Николай Тарасов</p>
+            <p lang="en">Marketing</p>
+          </li>
+          <li>
+            <img src="./images/miha.jpg" alt="фото графического дизайнера" width="270" />
+            <p>Михаил Ермаков</p>
+            <p lang="en">UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer>
-
+      <p>WebStudio</p>
+      <address>
+        <ul>
+          <li>
+            <a href="https://goo.gl/maps/3YyCsxuDANo3jjF6A" target="_blank"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li><a href="mailto:info@example.com">info@example.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
     </footer>
-</body>
+  </body>
 </html>
