--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
           <li><a href="">Контакты</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <main>
       <!-- герой -->
@@ -69,29 +71,29 @@
         <ul>
           <li>
             <img src="./images/igor.jpg" alt="фото дизайнера" width="270" />
-            <p>Игорь Демьяненко</p>
+            <h3>Игорь Демьяненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
             <img src="./images/olga.jpg" alt="фото разработчика" width="270" />
-            <p>Ольга Репина</p>
+            <h3>Ольга Репина</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/nikola.jpg" alt="фото маркетолога" width="270" />
-            <p>Николай Тарасов</p>
+            <h3>Николай Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
             <img src="./images/miha.jpg" alt="фото графического дизайнера" width="270" />
-            <p>Михаил Ермаков</p>
+            <h3>Михаил Ермаков</h3>
             <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <p>WebStudio</p>
+      <a href="">WebStudio</a>
       <address>
         <ul>
           <li>
