--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <a href="">WebStudio</a>
       <nav>
         <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
+          <li><a href="./index.html">Студия</a></li>
+          <li><a href="./portfolio.html">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
       </nav>
@@ -92,6 +92,7 @@
         </ul>
       </section>
     </main>
+    <!-- Футер -->
     <footer>
       <a href="">WebStudio</a>
       <address>
