--- a/index.html
+++ b/index.html
@@ -4,53 +4,69 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Шапка -->
-    <header>
-      <a href="">WebStudio</a>
-      <nav>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+    <header class="header">
+      <a href="./index.html" class="logo link">Web<span class="header-logo-text">Studio</span></a>
+      <nav class="header-nav">
+        <ul class="header-nav-list list">
+          <li class="header-nav-item">
+            <a href="./index.html" class="header-nav-link active">Студия</a>
+          </li>
+          <li class="header-nav-item">
+            <a href="./portfolio.html" class="header-nav-link">Портфолио</a>
+          </li>
+          <li class="header-nav-item"><a href="" class="header-nav-link">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="header-cl list">
+        <li><a href="mailto:info@devstudio.com" class="header-cl-link">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="header-cl-link">+38 096 111 11 11</a></li>
       </ul>
     </header>
+    <!-- Главный контент -->
     <main>
       <!-- герой -->
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button type="button" class="hero-btn">Заказать услугу</button>
       </section>
       <!-- Особенности -->
-      <section>
-        <h2>Особенности</h2>
-        <ul>
-          <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+      <section class="features">
+        <h2 class="features-title">Особенности</h2>
+        <ul class="features-list">
+          <li class="features-item">
+            <h3 class="features-item-title">Внимание к деталям</h3>
+            <p class="features-item-subtitle">
+              Идейные соображения, а также начало повседневной работы по формированию позиции.
+            </p>
           </li>
-          <li>
-            <h3>Пунктуальность</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-item-title">Пунктуальность</h3>
+            <p class="features-item-subtitle">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
-          <li>
-            <h3>Планирование</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-item-title">Планирование</h3>
+            <p class="features-item-subtitle">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
-          <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          <li class="features-item">
+            <h3 class="features-item-title">Современные технологии</h3>
+            <p class="features-item-subtitle">
+              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+            </p>
           </li>
         </ul>
       </section>
@@ -93,17 +109,24 @@
       </section>
     </main>
     <!-- Футер -->
-    <footer>
-      <a href="">WebStudio</a>
+    <footer class="footer">
+      <a href="./index.html" class="logo link">Web<span class="footer-logo-text">Studio</span></a>
       <address>
-        <ul>
-          <li>
-            <a href="https://goo.gl/maps/3YyCsxuDANo3jjF6A" target="_blank"
+        <ul class="footer-cl list">
+          <li class="footer-nav-item">
+            <a
+              href="https://goo.gl/maps/3YyCsxuDANo3jjF6A"
+              target="_blank"
+              class="footer-adress-link"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li class="footer-nav-item">
+            <a href="mailto:info@example.com" class="footer-cl-link">info@example.com</a>
+          </li>
+          <li class="footer-nav-item">
+            <a href="tel:+380961111111" class="footer-cl-link">+38 096 111 11 11</a>
+          </li>
         </ul>
       </address>
     </footer>
